--- a/softech-stock-exchange-candle-editor/pom.xml
+++ b/softech-stock-exchange-candle-editor/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>pl.softech</groupId>
-        <artifactId>softech-gpw-stock-exchange</artifactId>
+        <artifactId>softech-stock-exchange</artifactId>
         <version>1.0</version>
     </parent>
     <groupId>pl.softech</groupId>
