--- a/softech-stock-exchange-candle-editor/pom.xml
+++ b/softech-stock-exchange-candle-editor/pom.xml
@@ -5,11 +5,11 @@
     <parent>
         <groupId>pl.softech</groupId>
         <artifactId>softech-stock-exchange</artifactId>
-        <version>1.0</version>
+        <version>1.0-SNAPSHOT</version>
     </parent>
     <groupId>pl.softech</groupId>
     <artifactId>softech-stock-exchange-candle-editor</artifactId>
-    <version>1.0</version>
+    <version>1.0-SNAPSHOT</version>
     <name>softech-stock-exchange-candle-editor</name>
     <url>http://maven.apache.org</url>
     <properties>
